Changelog
=========

Here you can see the full list of changes between each Flask-Restless release.

.. note::

   As of version 0.6, Flask-Restless supports both pure SQLAlchemy and
   Flask-SQLAlchemy models. Before that, it supported only Elixir models.

Version 0.9.0-dev
-----------------

Not yet released.

- Fixed issue #109: use `sphinxcontrib-issuetracker`_ to render links to GitHub
  issues in documentation.
- Fixed issue #105: added ability to set a list of related model instances on a
  model.
- Fixed issue #107: server responds with an error code when a
  :http:method:`patch` or :http:method:`post` request specifies a field which
  does not exist on the model.
- Fixed issue #108: dynamically loaded relationships should now be rendered
  correctly by the :func:`views._to_dict` function regardless of whether they
  are a list or a single object.

.. _sphinxcontrib-issuetracker: https://sphinxcontrib-issuetracker.readthedocs.org/en/latest

Version 0.8.0
-------------

Released on November 19, 2012.

- Fixed issue #104: added ``num_results`` key to paginated JSON responses.
- Fixed issue #94: :func:`views._to_dict` should return a single object instead
  of a list when resolving dynamically loaded many-to-one relationships.

Version 0.7.0
-------------

Released on October 9, 2012.

- Fixed issue #86 allow specifying include and exclude for related models.
- Added ``exclude_columns`` keyword argument to :meth:`APIManager.create_api`.
- Fixed issue #101: ``exclude`` in :func:`views._to_dict` function now
  correctly excludes requested fields from the returned dictionary.
- Added working ``include`` and ``exclude`` functionality to the
  :func:`views._to_dict` function.
- Fixed issue #98: :http:method:`get` requests to the function evaluation
  endpoint should not have a data payload.
- Added a ``total_pages`` mapping to the JSON response according to pull
  request #93.
- Fixed issue #91: correctly handle :http:method:`post` requests to nullable